# physics-engine

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/af-config/: repo-analyzer.config.json
.github/workflows/: af_maintenance.yml
docs/: DIAGNOSTICS_README.md  FAILURE_ANALYSIS.md  architecture.md  examples.md  integration.md  performance.md  plugins.md  roadmap.md
physics-engine/: Cargo.toml
physics-engine/benches/: integration.rs  pooling.rs  storage.rs
physics-engine/examples/: basic.rs  particle_collision.rs  simd_detection.rs  soa_demo.rs  solar_system.rs
physics-engine/src/: lib.rs  pool.rs
physics-engine/src/ecs/: component.rs  components.rs  entity.rs  mod.rs  scheduler.rs  system.rs  systems.rs  world.rs
physics-engine/src/integration/: mod.rs  rk4.rs  simd_helpers.rs  verlet.rs
physics-engine/src/plugins/: api.rs  gravity.rs  mod.rs  registry.rs
physics-engine/src/simd/: avx2.rs  avx512.rs  dispatch.rs  mod.rs  scalar.rs
physics-engine/tests/: conservation.rs  edge_cases.rs  integration_failures.rs  rk4_accuracy.rs
repo-analysis-output/: SUMMARY.md  dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
