[package]
name = "physics-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "A high-performance ECS-based physics engine with parallel execution support"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
simd = []

[dependencies]
rayon = { workspace = true, optional = true }
semver = { workspace = true }
raw-cpuid = "11.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "solar_system"
path = "examples/solar_system.rs"

[[example]]
name = "particle_collision"
path = "examples/particle_collision.rs"

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "storage"
harness = false

[package.metadata.docs.rs]
all-features = true
